[tool.poetry]
name = "drl partie 1"
version = "0.1.0"
description = ""
authors = ["tom <ttaranto@ekinox.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"